src/objects/Contract_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Service_Contract__c</referenceTo>
        <relationshipLabel>Costs</relationshipLabel>
        <relationshipName>Contract_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost (inc FCR)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCR__c</fullName>
        <label>Actual FCR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pays_VAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pays VAT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Definition__c</fullName>
        <label>Service Definition</label>
        <picklist>
            <picklistValues>
                <fullName>Activity group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness raising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community support service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day care and support (establishment based)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia adviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia cafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (one to one)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer support group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered home care and support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singing for the Brain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone helpline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggested_FCR__c</fullName>
        <formula>Cost__c - (Cost__c /1.15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested FCR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <formula>IF( Pays_VAT__c , Cost__c * 0.175, 0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>The financial year for which the cost / income is being record</description>
        <inlineHelpText>The financial year for which the cost / income is being record</inlineHelpText>
        <label>Financial Year</label>
        <picklist>
            <picklistValues>
                <fullName>2008/09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010/11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011/12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012/13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013/14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014/15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016/17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017/18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018/19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019/20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020/21</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contract Cost</label>
    <nameField>
        <displayFormat>{YYYY}-{000}</displayFormat>
        <label>Contract Cost Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>